<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popupwindow">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:textSize="25dp"
            android:text="@string/Login_Failed" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingLeft="20dp"
            android:layout_gravity="center"
            android:textSize="15dp"
            android:text="@string/Login_Failed_Message" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/dismiss_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dismiss_button_design"
            android:text="@string/dismiss"
            android:textColor="#75A3E7" />
    </LinearLayout>



</RelativeLayout>