<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Activity.Activity_CarDetail">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ToolBarStyle"
        app:navigationIcon="@drawable/ic_back_black"
        android:elevation="5dp">
    </androidx.appcompat.widget.Toolbar>

    <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"-->


    <androidx.cardview.widget.CardView
        android:id="@+id/car_detail_image_id"
        android:layout_width="match_parent"
        android:layout_height="330dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="20dp">
        <ImageView
            android:id="@+id/vehicle_image_id"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/car_name_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="150dp"
        android:textSize="25sp"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/car_name_id"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:background="@color/grinsboro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:text="@string/car_model"/>

    <TextView
        android:id="@+id/car_model_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="14sp"
        android:text="@string/Status"/>


    <TextView
        android:id="@+id/car_conn_status_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="520dp"
        android:layout_marginStart="140dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/bluetooth_lock_button_id"
        android:text="@string/lock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/lock_button_design"
        android:minWidth="250dp"
        android:minHeight="50dp"
        android:elevation="5dp"
        android:layout_marginBottom="100dp"
        android:textColor="#fff"
        android:layout_alignParentBottom="true"
        android:paddingStart="50dip"
        android:paddingEnd="50dp"
        android:drawableLeft="@drawable/ic_lock_outline_white_24dp" />

        <Button
        android:id="@+id/bluetooth_unlock_button_id"
        android:text="@string/unlock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/unlock_button_design"
        android:minWidth="250dp"
        android:minHeight="45dp"
        android:elevation="5dp"
        android:layout_marginBottom="40dp"
        android:textColor="#000"
        android:layout_alignParentBottom="true"
        android:paddingStart="50dip"
        android:paddingEnd="50dp"
        android:drawableLeft="@drawable/ic_unlock_open_black_24dp"/>


    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:orientation="vertical"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="20dp"
        android:padding="1dp">
    <Button
        android:id="@+id/bt_enable_button_id"
        android:text="@string/enable_bluetooth"
        android:layout_width="120dp"
        android:layout_height="45dp"
        android:background="@drawable/connect_button_design"
        android:elevation="5dp"
        android:textColor="@color/textOnSecondary"
        android:textSize="13sp"/>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/simple_tick_animation_id"
        android:layout_width="40dp"
        android:layout_height="45dp"
        android:layout_marginBottom="3dp"
        android:elevation="10dp"
        app:lottie_autoPlay="true"
        android:layout_gravity="center"
        app:lottie_fileName="641-simple-tick.json"/>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_height="match_parent"
            android:layout_width="match_parent" >
        </FrameLayout>
    </LinearLayout>


</RelativeLayout>