<?xml version="1.0" encoding="utf-8"?>

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/root_layout_id"
        android:layout_width="match_parent"
        android:foreground="@drawable/dim"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:fitsSystemWindows="true">
    <!--android:foreground="@drawable/dim"!-->

        <RelativeLayout
            android:id="@+id/login_relative_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/login_animation"
            tools:context=".Activity.Activity_Login">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <LinearLayout
                    android:id="@+id/keyin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusableInTouchMode="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/app_logo"
                        android:layout_width="200dp"
                        android:layout_height="160dp"
                        app:srcCompat="@drawable/logo5" />

                    <EditText
                        android:id="@+id/username_id"
                        android:layout_width="310dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/login_user_pw_design"
                        android:hint="@string/username_hint"
                        android:inputType="text"
                        android:paddingLeft="20dp"
                        android:textColorHint="@color/grinsboro" />

                    <EditText
                        android:id="@+id/password_text_id"
                        android:layout_width="310dp"
                        android:layout_height="45dp"
                        android:layout_margin="5dp"
                        android:background="@drawable/login_user_pw_design"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:paddingLeft="20dp"
                        android:textColorHint="@color/grinsboro" />

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp">

                    <Button
                        android:id="@+id/login_btn_id"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_button_design"
                        android:elevation="20dp"
                        android:clickable="true"
                        android:textSize="11sp"
                        android:text="@string/login"
                        android:theme="@style/buttonStyle" />

                        <ProgressBar
                            android:id="@+id/progress_bar_id"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="30dp"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/login_btn_id"
                            android:layout_alignTop="@+id/login_btn_id"
                            android:layout_centerHorizontal="true"
                            android:indeterminate="true"
                            android:elevation="10dp"
                            android:indeterminateTint="@android:color/white"
                            android:visibility="gone" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/first_time_id"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="First time login?"
                        android:clickable="true"
                        android:textSize="15sp"
                        android:textColor="@color/light_font" />

                    <TextView
                        android:id="@+id/login_help_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Need help signing in?"
                        android:textColor="@color/light_font" />


                </LinearLayout>

            </ScrollView>

        </RelativeLayout>
    </RelativeLayout>
